update title in index

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Cardo:400,700" rel="stylesheet">
-    <title>Pureun and Austin</title>
+    <title>Austin Loves Pureun</title>
   </head>
   <body>
     <noscript>
